--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="w-full h-full"></div>
+    <div id="app" class="w-full h-full overflow-y-auto"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
