--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <title>Vite App</title>
   </head>
 
-  <body>
+  <body class="bg-blue-100 font-rubik">
     <div id="app" class="w-full h-full overflow-y-auto"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
